
+---------------------------+
| KNOWN BUGS                |
+---------------------------+

	(FIXED) http://sourceforge.net/tracker/?func=detail&aid=3034450&group_id=222729&atid=1056532
	* CRYTICAL warning when unloading the plugin
		"CRITICAL	: g_object_ref: assertion `object->ref_count > 0' failed"
	(FIXED) Double click on bookmarks, do nothing
	(FIXED) show/hide hidden files not working on Windows
	(FIXED) "Go Up" not working if the current path ends with slash // thanks to <dmaphy> for the report


+---------------------------+
| TODO                      |
+---------------------------+

	(DONE) codestyle improve to be same as other parts as geany`s
	(DONE) configuration dialog
	(DONE) tracking path to current focused document (work only for refreshed directories)
	* Better tracking for files, when they are not cached, open path to them
	* In windows can choice between devices (C:\, D:\,...)
	* Language files
	(DONE) Saving state of Showbars in config file everytime where is changed
	(DONE) oneclick document opening
	(DONE) filter separating ex.: "*.c;*.cpp;*.h"
	* Fix possible memory leaks (using g_free... where is need)
	* Folowing path from current document view
	(DONE) Hide object files as native filebroser (*.o;*.a;*.so;*.dll;*.lib..)
	(DONE) Using font from geany settings for sidebar
	* Migrating to stash
	(DONE) Adding keybindings for renaming/deleting/refreshing
	(DONE) Add option to change bars position // requested by <dmaphy>
	(DONE) Add option to autorename point the newest created objects by the Treebrowser


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+

05-10-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		Added keybindings for renaming/deleting/refreshing
			(from the todo list)
		Added: now when option for show hidden files is disabled, it don`t show
			files that ends with '~'
		Fixed possible segfault when option "Hidding object files" is enabled